Crash on Copy Vertex Group to Selected #49860

Closed
opened 2016-10-27 21:17:33 +02:00 by Duarte Farrajota Ramos · 8 comments

System Information
Windows 7 64 bits GTX580 + GTX980Ti

Blender Version
Broken: 2.78, ec6b593, 2.78a

Short description of error
Using the Copy Vertex Group to Selected operator from the space bar menu causes blender to crash

Exact steps for others to reproduce the error
In the attached file Crash_CopyVertexGroups.blend try copying vertex group from object A to B by:

  • Selecting Object A
  • Selecting Object B
  • with object A as active from the spacebar menu use the Copy Vertex Group to Selected
  • Blender should crash.

Quick question, question forgive my ignorance but shouldn't two objects instances (sharing same mesh objectdata) also share the same Vertex Groups by default? Unless I misunderstood something Vertex Groups are part of mesh data and should be the same in two clone instances sharing the same mesh data.

**System Information** Windows 7 64 bits GTX580 + GTX980Ti **Blender Version** Broken: 2.78, ec6b593, 2.78a **Short description of error** Using the *Copy Vertex Group to Selected* operator from the space bar menu causes blender to crash **Exact steps for others to reproduce the error** In the attached file [Crash_CopyVertexGroups.blend](https://archive.blender.org/developer/F387597/Crash_CopyVertexGroups.blend) try copying vertex group from object A to B by: - Selecting Object A - Selecting Object B - with object A as active from the spacebar menu use the *Copy Vertex Group to Selected* - Blender should crash. Quick question, question forgive my ignorance but shouldn't two objects instances (sharing same mesh objectdata) also share the same Vertex Groups by default? Unless I misunderstood something Vertex Groups are part of mesh data and should be the same in two clone instances sharing the same mesh data.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-10-28 08:27:02 +02:00

Crash confirmed…

To answer to your question, unfortunately vgroups are one of those ugly things that are part object, part mesh data (to be precise, groups are defined in object, while group 'data' (which vertex pertains to which group) is stored in mesh). This is the source of many issues and inconsistencies :/

Crash confirmed… To answer to your question, unfortunately vgroups are one of those ugly things that are part object, part mesh data (to be precise, groups are defined in object, while group 'data' (which vertex pertains to which group) is stored in mesh). This is the source of many issues and inconsistencies :/

Ah yes, I see, I always like knowing a bit more about the inner workings and technical side of Blender.
Thanks for the thorough explanation :)

Ah yes, I see, I always like knowing a bit more about the inner workings and technical side of Blender. Thanks for the thorough explanation :)

Added subscriber: @Almisuifre

Added subscriber: @Almisuifre

This issue was referenced by f3a7104adb

This issue was referenced by f3a7104adbe23e85b1ff1ef010d01c80b0868f6b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49860
No description provided.