Fix T49860: Copying vgroups between objects sharing the same obdata was not possible.

Pretty straight forward actually, just do not bother about obdata part
of vgroups in that case, only copy object part of it.

And let's curse once again those stuff spread accross several types of
data-blocks...